# arrow-lake

./: Cargo.toml
src/: main.rs
src/core/: chunks.rs  dataset.rs  filter.rs  groupby.rs  hm.rs  hm2.rs  join  join.rs  merge.rs  mod.rs  table.rs
src/core/series/: mod.rs
src/io/: factory.rs  mod.rs
src/io/parquet/: read.rs  write.rs  write_random.rs
