[package]
name = "steps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = {version = "0.14.2", features = ["io_parquet", "io_parquet_compression", "compute"]}
rayon = "1.5.3"
serde = "1.0.147"
serde_json = "1.0.59"